# WasmApiForDelphi

./: .gitignore  Ownership.pas  Readme.md  Wasm.Wasi.pas  Wasm.pas  WasmExamples.dpr  WasmExamples.dproj  WasmSample_Callback.pas  WasmSample_Finalize.pas  WasmSample_Memory.pas  WasmSample_Multi.pas  WasmSample_Table.pas  WasmSample_Threads.pas  WasmTest.pas  WasmTest_Bench.pas  WasmTest_ShareMemory.pas  Wasmer.pas  Wasmtime.pas  WasmtimeSample_Linking.pas  wasm_bench.wasm  wasm_bench_.wasm  wasm_bench_llvm.wasmu
rust_bench_source/: Cargo.toml
rust_bench_source/src/: lib.rs
